get user by  token
